# oligarch-fund

./: README.md  app.py  current_holdings.csv  fund_history.csv  oligarch_data.csv  pyproject.toml
