[project]
name = "oligarch-fund"
version = "0.1.0"
requires-python = ">= 3.9.6"
dependencies = []

[tool.poetry]
name = "oligarch-fund"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
package-mode = false  # <-- Add this line

[tool.poetry.dependencies]
python = "^3.9"
streamlit = "*"
pandas = "*"
plotly = "*"